objects/Sidebar_Menu_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>This is the name which is displayed on menu.</description>
        <inlineHelpText>This is the name which is displayed on menu.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>Small Group
Mid Market
Large Group
National Accounts</description>
        <inlineHelpText>Small Group
Mid Market
Large Group
National Accounts</inlineHelpText>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>New Tab or Same Window</description>
        <inlineHelpText>New Tab or Same Window</inlineHelpText>
        <label>Target</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sidebar Menu Settings</label>
    <listViews>
        <fullName>All_fields</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Target__c</columns>
        <columns>URL__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All fields</label>
    </listViews>
</CustomObject>